# pyterrier-elasticsearch

./: README.md  pyproject.toml  setup.cfg
examples/: search.ipynb
pyterrier_elasticsearch/: __init__.py  retrieve.py
