[metadata]
name = pyterrier_elasticsearch
version = attr: pyterrier_elasticsearch.__version__
author = Jan Heinrich Reimer
author_email = jan.reimer@student.uni-halle.de
maintainer = Jan Heinrich Reimer
description = Retrieve from Elasticsearch indices in PyTerrier.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/heinrichreimer/pyterrier_elasticsearch
project_urls =
    Bug Tracker = https://github.com/heinrichreimer/pyterrier_elasticsearch/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =
    elasticsearch[requests]>=7
    python-terrier>=0.8,==0.*
    pyjnius>=1.3.0,==1.3.*
    pandas>=1.3,==1.*
    tqdm>=4.8,==4.*
    cached-property>=1.5,==1.*
    typing-extensions>=4.0,==4.*
    setuptools>=42
    importlib-metadata>=4.0,==4.*

[options.extras_require]
test =
    elasticsearch>=7.17,==7.*
    flake8>=4.0,==4.*
    pylint>=2.12,==2.*
    pytest>=6,<9
    pytest-cov>=3.0,==3.*
    jupyter>=1.0,==1.*
